--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -124,6 +124,7 @@ h3, .h3, h2, .h2, h1, .h1{
         .nav-link{          
             padding: 0.3rem 1.5rem;  
             border-radius: 5rem;
+            font-size: 1.3rem;
 
             &.active{
                 background-color: $primary;
